--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -14,6 +15,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTDd9P6O8LVgjK6cZas1InW3SSAuDDqbY&libraries=places"></script>
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
@@ -30,6 +34,7 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Ionic's root component and where the app will load -->
@@ -46,4 +51,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
